testsuite/tests/grammar/invalid_error_node/test_abstract.lkt
import common

@abstract class BaseErrorDecl : FooNode implements ErrorNode {
}

class ErrorDecl : BaseErrorDecl {
}
